--- a/main.html
+++ b/main.html
@@ -1,15 +1,67 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <div class="content">
         <div class="title">
-
+            <h1>Crie seu personagem!</h1>
+        </div>
+        <div class="form">
+            <label for="personagem">Personagem:
+                <input type="text" id="name" placeholder="Qual o nome do seu personagem?">
+            </label>
+            <label for="classe">Classe:
+                <select name="" id="classe">
+                    <option value="" disabled selected hidden>Escolha a classe do seu personagem</option>
+                    <option value="Sorcerers">Sorcerers</option>
+                    <option value="Paladins">Paladins</option>
+                    <option value="Oruios">Oruios</option>
+                    <option value="Knights">Knights</option>
+                </select>
+            </label>
+            <label for="server">Servidor:
+                <select name="" id="server">
+                    <option value="" disabled selected hidden>Escolha um...</option>
+                    <option value="America do Sul">América do Sul</option>
+                    <option value="America do Norte">América do Norte</option>
+                    <option value="America Central">América Central</option>
+                    <option value="Europa">Europa</option>
+                    <option value="Africa">Africa</option>
+                    <option value="Ásia">Ásia</option>
+                </select>
+            </label>
+            <label for="cidade">Cidade de Origem:
+                <select name="" id="cidade">
+                    <option value="Ab'Dendriel">Ab'Dendriel</option>
+                    <option value="Carlin">Carlin</option>
+                    <option value="Kazordoon">Kazordoon</option>
+                    <option value="Thais">Thais</option>
+                    <option value="Venore">Venore</option>
+                </select>
+            </label>
+            <label for="email">E-mail:
+                <input type="text" name="email" id="email" placeholder="Digite seu e-mail...">
+            </label>
+            <label for="senha">Senha:
+                <input type="text" name="senha" id="senha" placeholder="Digite uma senha...">
+            </label>
+        </div>
+        <div class="but">
+            <button onclick="analisar()">Criar Personagem</button>
+        </div>
+        <div class="exib">
+            <h1>Dados do Personagem:</h1>
+            <p id="nameex">Nome:</p>
+            <p id="classeex">Classe:  </p>
+            <p id="servidorex">Servidor:</p>
         </div>
     </div>
 </body>
+
 </html>
