--- a/main.html
+++ b/main.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="main.js"></script>
+    <link rel="stylesheet" href="main.css">
     <title>Formulário</title>
 </head>
 
