--- a/main.html
+++ b/main.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="main.js"></script>
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="link.css">
     <title>Formulário</title>
 </head>
 
